fixed viewing on mobile devices and printing

--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -23,7 +23,7 @@
 
 	<div class="container">
 
-		<div class="page-header">
+		<div class="page-header hidden-print">
 		  <h1><a href="{% url 'recipe-home' %}">Dave's Recipes</a></h1>
 		</div>
 
@@ -89,7 +89,7 @@
 
 </div>
 
-<div class="row">
+<div class="row hidden-print">
   <div class="col-md-12">
 	  <p class="text-center small">Thanks for visiting my site.<br />
          Source code is licensed under the GPLv2 and available at <a href="https://github.com/dgrant/django_recipes">https://github.com/dgrant/django_recipes</a></p>
