use minified version

--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -9,7 +9,7 @@
 	<title>{% block title %}{% endblock %}</title>
 
 	<link rel="stylesheet" href="http://bootswatch.com/readable/bootstrap.min.css">
-	<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.min.css">
 	<link rel="stylesheet" href="{% static "test.css" %}">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
