--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -8,7 +8,8 @@
 	<script type="text/javascript"></script>
 	<title>{% block title %}{% endblock %}</title>
 
-	<link rel="stylesheet" href="http://bootswatch.com/readable/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.min.css">
 	<link rel="stylesheet" href="{% static "test.css" %}">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
