Add context processor to show the Django version

--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -111,7 +111,7 @@
 
 <div class="row hidden-print">
   <div class="col-md-12">
-	  <p class="text-center small">Thanks for visiting my site.<br />
+	  <p class="text-center small">Thanks for visiting my site. Django version: {{ django_version }}<br />
          Source code is licensed under the GPLv2 and available at <a href="https://github.com/dgrant/django_recipes">https://github.com/dgrant/django_recipes</a></p>
   </div>
 </div>
